# lex-highlighter

./: Cargo.toml  README.md
examples/: js-highlighter.rs  sample.ts
src/: lib.rs  main.rs
