[package]
name = "lex-highlighter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
owo-colors = "3.5.0"
thiserror = "1.0.50"

[dev-dependencies]
swc_common = "0.33.8"
swc_ecma_parser = "0.141.22"
